--- a/src/templates/relatorios/listaPedidosInternacao.html
+++ b/src/templates/relatorios/listaPedidosInternacao.html
@@ -40,6 +40,9 @@
                     <span>Concluído ou Cancelado
                     </span>
                 </p>
+                <div class="col-12 kan-group">
+                    <input id="search" class="col-md-6 form-control form-control-sm" type="text" ng-model="search" placeholder="Digite para pesquisar">
+                </div>
                 <filtros model="dadosFiltros" evento="evento" is-pedido="true"></filtros>
             </div>
             <div class="table-responsive">
