--- a/src/templates/relatorios/listaPedidosInternacaoAbertos.html
+++ b/src/templates/relatorios/listaPedidosInternacaoAbertos.html
@@ -1,85 +1,87 @@
 <div ng-controller="PedidosInternacaoController" ng-init="carregarPedidos()">
     <div class="kan-row-modal">
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <h5 class="kan-title">Lista com Pedidos de Internação em Aberto
-                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará todos os pedidos de internação em aberto.
+            <h5 class="kan-title">Lista com Pedidos de Internação em Aberto
+                <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará todos os pedidos de internação em aberto.
                     Através dos campos abaixo você consegue filtrar os dados exibidos, para isso basta inserir as informações que deseja buscar e clicar no botão Pesquisar.">
-                    </i>
-                </h5>
-                <p class="d-inline-block mr-4">
-                    <i class="fa fa-circle fa-1-x text-success"></i>
-                    <span>Aberto
-                        <strong>abaixo de 12 horas</strong>
-                    </span>
-                </p>
-                <p class="d-inline-block mr-4">
-                    <i class="fa fa-circle fa-1-x text-warning"></i>
-                    <span>Aberto
-                        <strong>de 12 a 24 horas</strong>
-                    </span>
-                </p>
-                <p class="d-inline-block mr-4">
-                    <i class="fa fa-circle fa-1-x text-danger"></i>
-                    <span>Aberto
-                        <strong>acima de 24 horas</strong>
-                    </span>
-                </p>
-                <filtros model="dadosFiltros" evento="evento" oculta-status="true" is-pedido="true"></filtros>
+                </i>
+            </h5>
+            <p class="d-inline-block mr-4">
+                <i class="fa fa-circle fa-1-x text-success"></i>
+                <span>Aberto
+                    <strong>abaixo de 12 horas</strong>
+                </span>
+            </p>
+            <p class="d-inline-block mr-4">
+                <i class="fa fa-circle fa-1-x text-warning"></i>
+                <span>Aberto
+                    <strong>de 12 a 24 horas</strong>
+                </span>
+            </p>
+            <p class="d-inline-block mr-4">
+                <i class="fa fa-circle fa-1-x text-danger"></i>
+                <span>Aberto
+                    <strong>acima de 24 horas</strong>
+                </span>
+            </p>
+            <div class="col-12 kan-group">
+                <input id="search" class="col-md-6 form-control form-control-sm" type="text" ng-model="search" placeholder="Digite para pesquisar">
             </div>
-            <div class="table-responsive">
-                <table class="table table-bordered table-hover table-sm">
-                    <thead>
-                        <tr class="bg-secondary">
-                            <th class="text-center">Ala</th>
-                            <th class="text-center">Médico</th>
-                            <th class="text-center">Residente</th>
-                            <th class="text-center">Prontuário</th>
-                            <th class="text-center">Paciente</th>
-                            <th class="text-center">Mãe</th>
-                            <th class="text-center">Data Nasc</th>
-                            <th class="text-center">Idade</th>
-                            <th class="text-center">Sexo</th>
-                            <th class="text-center">Isolamento</th>
-                            <th class="text-center">Data Admissão</th>
-                            <th class="text-center">Tempo Aguardando</th>
-                            <th class="text-center">Status Pedido</th>
-                            <th class="text-center">Ação</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="pedido in listaPedidos  | filter : search | orderBy: 'dataAdmissao'" ng-class="{ 'table-secondary' : pedido.statusPedido == 'CONCLUIDO' || pedido.statusPedido == 'CANCELADO',
+            <filtros model="dadosFiltros" evento="evento" oculta-status="true" is-pedido="true"></filtros>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover table-sm">
+            <thead>
+                <tr class="bg-secondary">
+                    <th class="text-center">Ala</th>
+                    <th class="text-center">Médico</th>
+                    <th class="text-center">Residente</th>
+                    <th class="text-center">Prontuário</th>
+                    <th class="text-center">Paciente</th>
+                    <th class="text-center">Mãe</th>
+                    <th class="text-center">Data Nasc</th>
+                    <th class="text-center">Idade</th>
+                    <th class="text-center">Sexo</th>
+                    <th class="text-center">Isolamento</th>
+                    <th class="text-center">Data Admissão</th>
+                    <th class="text-center">Tempo Aguardando</th>
+                    <th class="text-center">Status Pedido</th>
+                    <th class="text-center">Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="pedido in listaPedidos  | filter : search | orderBy: 'dataAdmissao'" ng-class="{ 'table-secondary' : pedido.statusPedido == 'CONCLUIDO' || pedido.statusPedido == 'CANCELADO',
                                                 'table-success' : pedido.classificacao == 'verde', 
                                                 'table-warning' : pedido.classificacao == 'amarela',
                                                 'table-danger'  : pedido.classificacao == 'vermelha' }">
-                            <td title="{{pedido.ala.nomeAla}}">{{pedido.ala.nomeAla}}</td>
-                            <td title="{{pedido.medicoResponsavel.nome}}">{{pedido.medicoResponsavel.nome}}</td>
-                            <td title="{{pedido.residenteResponsavel.nome}}">{{pedido.residenteResponsavel.nome}}</td>
-                            <td class="text-center" title="{{pedido.paciente.numProntuario}}">{{pedido.paciente.numProntuario | limitTo: 10}}</td>
-                            <td title="{{pedido.paciente.nomePaciente}}">{{pedido.paciente.nomePaciente}}</td>
-                            <td title="{{pedido.paciente.nomeMae}}">{{pedido.paciente.nomeMae}}</td>
-                            <td class="text-center" title="{{pedido.paciente.dataNascimento | date: 'dd/MM/yy'}}">{{pedido.paciente.dataNascimento | date: "dd/MM/yy"}}</td>
-                            <td class="text-center" title="{{pedido.paciente.idade}}">{{pedido.paciente.idade}}</td>
-                            <td class="text-center" title="{{pedido.paciente.genero}}">
-                                <span ng-show="pedido.paciente.genero == 'Masculino'">Masc.</span>
-                                <span ng-show="pedido.paciente.genero == 'Feminino'">Fem.</span>
-                            </td>
-                            <td title="{{pedido.isolamento.nome}}">{{pedido.isolamento.nome}}</td>
-                            <td class="text-center" title="{{pedido.dataAdmissao | date: 'dd/MM/yy HH:mm'}}">{{pedido.dataAdmissao | date: "dd/MM/yy HH:mm"}}</td>
-                            <td class="text-center" ng-show="pedido.statusPedido != 'PENDENTE'" title="-">
-                                -</td>
-                            <td class="text-center" ng-show="pedido.statusPedido == 'PENDENTE'" title="{{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}">
-                                {{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}</td>
-                            <td class="text-center" title="pedido.statusPedido">{{pedido.statusPedido}}</td>
-                            <td class="text-center">
-                                <button class="btn kan-btn-success kan-btn-sm" ng-click="closeThisDialog(pedido)">
-                                    Escolher
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </fieldset>
+                    <td title="{{pedido.ala.nomeAla}}">{{pedido.ala.nomeAla}}</td>
+                    <td title="{{pedido.medicoResponsavel.nome}}">{{pedido.medicoResponsavel.nome}}</td>
+                    <td title="{{pedido.residenteResponsavel.nome}}">{{pedido.residenteResponsavel.nome}}</td>
+                    <td class="text-center" title="{{pedido.paciente.numProntuario}}">{{pedido.paciente.numProntuario | limitTo: 10}}</td>
+                    <td title="{{pedido.paciente.nomePaciente}}">{{pedido.paciente.nomePaciente}}</td>
+                    <td title="{{pedido.paciente.nomeMae}}">{{pedido.paciente.nomeMae}}</td>
+                    <td class="text-center" title="{{pedido.paciente.dataNascimento | date: 'dd/MM/yy'}}">{{pedido.paciente.dataNascimento | date: "dd/MM/yy"}}</td>
+                    <td class="text-center" title="{{pedido.paciente.idade}}">{{pedido.paciente.idade}}</td>
+                    <td class="text-center" title="{{pedido.paciente.genero}}">
+                        <span ng-show="pedido.paciente.genero == 'Masculino'">Masc.</span>
+                        <span ng-show="pedido.paciente.genero == 'Feminino'">Fem.</span>
+                    </td>
+                    <td title="{{pedido.isolamento.nome}}">{{pedido.isolamento.nome}}</td>
+                    <td class="text-center" title="{{pedido.dataAdmissao | date: 'dd/MM/yy HH:mm'}}">{{pedido.dataAdmissao | date: "dd/MM/yy HH:mm"}}</td>
+                    <td class="text-center" ng-show="pedido.statusPedido != 'PENDENTE'" title="-">
+                        -</td>
+                    <td class="text-center" ng-show="pedido.statusPedido == 'PENDENTE'" title="{{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}">
+                        {{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}</td>
+                    <td class="text-center" title="pedido.statusPedido">{{pedido.statusPedido}}</td>
+                    <td class="text-center">
+                        <button class="btn kan-btn-success kan-btn-sm" ng-click="closeThisDialog(pedido)">
+                            Escolher
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+    </fieldset>
+</div>
 </div>
