--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -21,6 +21,9 @@
     <span>Finalizado
     </span>
 </p>
+<div class="col-12 kan-group">
+    <input id="search" class="col-md-6 form-control form-control-sm" type="text" ng-model="search" placeholder="Digite para pesquisar">
+</div>
 <filtros model="dadosFiltros" evento="evento" oculta-status="ocultaStatus"></filtros>
 </div>
 <div class="table-responsive">
@@ -49,7 +52,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="registro in registros" ng-class="{'table-success' : registro.classificacao === 'verde', 'table-danger' : registro.classificacao === 'vermelho', 'table-warning' : registro.classificacao === 'amarelo'}">
+            <tr ng-repeat="registro in registros | filter: search" ng-class="{'table-success' : registro.classificacao === 'verde', 'table-danger' : registro.classificacao === 'vermelho', 'table-warning' : registro.classificacao === 'amarelo'}">
                 <td class="text-center" title="{{registro.leito.enfermaria.ala.nomeAla}}">{{registro.leito.enfermaria.ala.nomeAla}}</td>
                 <td class="text-center" title="{{registro.leito.enfermaria.nomeEnfermaria}}">{{registro.leito.enfermaria.nomeEnfermaria}}</td>
                 <td class="text-center">{{registro.leito.nomeLeito}}</td>
@@ -76,10 +79,10 @@
                     </button>
                 </td>
                 <td class="text-center" ng-click="openModalTransferenciasLeito(registro)">
-                        <button class="btn kan-btn-circle kan-btn-success kan-btn-sm" data-toggle="tooltip" title="Transferência de leito">
-                            <i class="fa fa-exchange"></i>
-                        </button>
-                    </td>
+                    <button class="btn kan-btn-circle kan-btn-success kan-btn-sm" data-toggle="tooltip" title="Transferência de leito">
+                        <i class="fa fa-exchange"></i>
+                    </button>
+                </td>
                 <td class="text-center" ng-show="showAcoes">
                     <button class="btn kan-btn-success kan-btn-sm" ng-click="closeModal(registro)">
                         Escolher
