Ajustado tamanho do campo ala no dashboard

--- a/src/templates/relatorios/dashboard.html
+++ b/src/templates/relatorios/dashboard.html
@@ -16,7 +16,7 @@
 <div class="row bg-white m-0 mb-3">
 	<div class="card border-0">
 		<div class="card-body">
-			<div class="col-12 kan-group">
+			<div class="col-12 col-md-5 kan-group">
 				<h5 class=" kan-title">Relatórios por ala</h5>
 				<label>Ala
 				</label>
